--- a/rules.html
+++ b/rules.html
@@ -16,17 +16,19 @@
       <span class="logo__mark">SC</span>
       <span class="logo__text">STOLAR CARP</span>
     </a>
+
     <nav class="nav" id="nav">
-  <a href="/index.html" class="nav__link">Головна</a>
-  <a href="/rules.html" class="nav__link">Регламент</a>
-  <a href="/register.html" class="nav__link">Реєстрація</a>
-  <a href="/live.html" class="nav__link">Live</a>
-  <a href="/rating.html" class="nav__link">Рейтинг</a>
-  <a href="/lakes.html" class="nav__link">Водойми</a>
-  <a href="/sponsors.html" class="nav__link">Спонсори</a>
-  <a href="/events/index.html" class="nav__link">Архів</a>
-  <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
-</nav>
+      <a href="/index.html" class="nav__link">Головна</a>
+      <a href="/rules.html" class="nav__link nav__link--active">Регламент</a>
+      <a href="/register.html" class="nav__link">Реєстрація</a>
+      <a href="/live.html" class="nav__link">Live</a>
+      <a href="/rating.html" class="nav__link">Рейтинг</a>
+      <a href="/lakes.html" class="nav__link">Водойми</a>
+      <a href="/sponsors.html" class="nav__link">Спонсори</a>
+      <a href="/events/index.html" class="nav__link">Архів</a>
+      <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
+    </nav>
+
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
 </header>
@@ -36,121 +38,211 @@
     <h1 class="title-gradient">Регламент змагань STOLAR CARP</h1>
 
     <div class="notice">
-      Учасники беруть повну участь у зважуванні: покласти рибу в мішок, зачепити на вагу та відпустити у воду.  
+      Учасники беруть повну участь у зважуванні: витягнути короповий мішок з рибою, покласти у мат, перемістити в зважувальний мішок, зачепити на вагу та відпустити рибу у воду одразу після фіксації ваги.
       Це дозволяє судді оперативно внести дані до протоколу.
     </div>
 
     <h3>Основні пункти</h3>
     <ul>
       <li>Сектори та зони визначаються жеребкуванням.</li>
-      <li>Можна зайти й почистити свій сектор до старту.</li>
-      <li>Залік: загальна вага. При однаковій вазі вирішує «Big Fish».</li>
-      <li>Оновлення протоколів на сайті онлайн.</li>
-      <li>Фінансові умови: внесок не повертається згідно з регламентом.</li>
+      <li>Залік: загальна вага улову за змагання. При однаковій вазі вирішує «Big Fish» (найбільша риба).</li>
+      <li>Оновлення протоколів на сайті — онлайн.</li>
+      <li>Усі учасники зобов’язані дотримуватись регламенту та правил водойми.</li>
+      <li>Дати старту/фінішу конкретного етапу — на сайті змагання.</li>
     </ul>
 
     <p class="form__hint">
-      🏆 <strong>РЕГЛАМЕНТ ЗМАГАНЬ STOLAR CARP 2025</strong>  
-      (універсальний для командних та індивідуальних турнірів)
+      🏆 <strong>РЕГЛАМЕНТ ЗМАГАНЬ STOLAR CARP</strong><br>
+      (універсальний для командних етапів та формату STALKER)
     </p>
 
     <h3>1. Загальні положення</h3>
     <ul>
-      <li>Змагання проводяться у форматі «зловив — відпустив».</li>
-      <li>До участі допускаються всі охочі рибалки — як команди, так і одиночні спортсмени (сталкери).</li>
-      <li>Мета турніру — розвиток спортивного карпфішингу, популяризація чесної гри та підтримка ЗСУ.</li>
-      <li>Дозволено ловлю класичною чи флет-оснасткою (1 гачок).</li>
-      <li>Змагання проводяться за принципом гуманного ставлення до риби.</li>
-      <li>Усі учасники зобов’язані дотримуватись регламенту та правил водойми.</li>
-      <li>Організатор може змінювати програму без шкоди чесності змагання.</li>
+      <li>Змагання проводяться у форматі «зловив — відпустив» (Catch &amp; Release).</li>
+      <li>Мета змагань — розвиток спортивного карпфішингу, популяризація чесної гри та гуманного ставлення до риби.</li>
+      <li>Учасники зобов’язані виконувати вимоги організатора та суддівської бригади.</li>
+      <li>Організатор має право уточнювати програму/графік без шкоди чесності змагань і з обов’язковим повідомленням учасників.</li>
+      <li>Будь-які спірні питання вирішує головний суддя. Рішення головного судді — остаточне.</li>
     </ul>
 
-    <h3>2. Формат участі</h3>
+    <h3>2. Формат участі та склад команди</h3>
     <ul>
-      <li>Формати:  
+      <li><strong>Командний формат:</strong> 2–3 повноцінних учасника в секторі.</li>
+      <li><strong>STALKER (соло):</strong> 1 учасник у секторі.</li>
+      <li>Для обох форматів діють однакові правила з цього регламенту.</li>
+    </ul>
+
+    <h3>3. Організаційні питання</h3>
+    <ul>
+      <li>Час прибуття команд, жеребкування, старт і фініш — відповідно до офіційного розкладу етапу (на сайті).</li>
+      <li><strong>Дистанція лову</strong> фіксується (встановлюється) <strong>перед жеребкуванням</strong> та є обов’язковою для всіх учасників.</li>
+      <li>Після жеребкування та заїзду у сектор дозволено маркування (маркеріння) протягом змагань згідно правил нижче.</li>
+      <li>Гості залишають автомобілі на паркомісцях і до сектору проходять пішки.</li>
+      <li>Забороняється їздити автомобілем по береговій лінії від старту до фінішу.</li>
+    </ul>
+
+    <h3>4. Правила лову та оснащення</h3>
+    <ul>
+      <li><strong>Довжина вудилищ:</strong> не більше <strong>4.5 м</strong>.</li>
+
+      <li>
+        <strong>Вудилища:</strong>
         <ul>
-          <li>Командний — 2–3 учасники на сектор;</li>
-          <li>Одиночний (STALKER) — 1 спортсмен.</li>
+          <li>Дозволяється мати у секторі <strong>необмежену кількість удилищ</strong>.</li>
+          <li><strong>Одночасно в роботі — не більше 2 робочих вудилищ.</strong></li>
+          <li>На кожному робочому вудилищі — <strong>не більше 1 гачка</strong>.</li>
+          <li><strong>Забороняється закидати третє (запасне) вудилище з монтажем/гачком</strong>, коли одне з двох робочих ще не вимотане.</li>
         </ul>
       </li>
-      <li>Для обох форматів діють однакові правила.</li>
-      <li>Після реєстрації учасники додаються у Viber-групу «STOLAR CARP».</li>
-      <li>Під час змагань учасники повинні бути у манішках.</li>
-      <li>Організатор може відмовити в участі без пояснення причин.</li>
+
+      <li>
+        <strong>Маркеріння:</strong>
+        <ul>
+          <li>Дозволяється використання <strong>маркера 3-м вудилищем</strong> <strong>не виймаючи 2 робочих</strong>.</li>
+          <li>Маркеріння дозволено після заїзду у сектор після жеребкування та до фінішу.</li>
+        </ul>
+      </li>
+
+      <li>
+        <strong>Ліска та лідери:</strong>
+        <ul>
+          <li>Основна волосінь (моно) — <strong>не менше 0.23 мм</strong>.</li>
+          <li>Шок-лідер дозволено <strong>не більше 10 м</strong>.</li>
+          <li><strong>Лідкор — заборонено.</strong></li>
+        </ul>
+      </li>
+
+      <li>
+        <strong>Дозволені монтажі:</strong>
+        <ul>
+          <li><strong>Класичний</strong> або <strong>флет-метод</strong> (інші не потрібні).</li>
+          <li>Монтажі мають відповідати принципу <strong>безпечного звільнення риби від грузу</strong>.</li>
+          <li>Флет-метод — тільки на шок-лідері з безпечним звільненням.</li>
+        </ul>
+      </li>
+
+      <li>
+        <strong>Заборонені дії:</strong>
+        <ul>
+          <li>Використання корабликів/човнів та будь-яких плавзасобів для завозу оснасток і прикорму.</li>
+          <li>Запливання/заходження у воду під час змагань (виняток — екстрені ситуації за дозволом судді).</li>
+        </ul>
+      </li>
+
+      <li>
+        <strong>Дозволено зайти у воду до старту</strong> (до сигналу старту) для перевірки/очистки сектора від коряг і зачепів.
+      </li>
+
+      <li>
+        <strong>Дистанція лову:</strong>
+        <ul>
+          <li>Дистанція вимірюється <strong>по котушці</strong> (кліпса/лічильник/підрахунок обертів), а не по кінчику вудилища.</li>
+          <li>Фіксувати дистанцію на вудилищі/котушці — дозволено, як зручно команді, але <strong>не далі дозволеної</strong>.</li>
+        </ul>
+      </li>
     </ul>
 
-    <h3>3. Поведінка та дисципліна</h3>
+    <h3>5. Годування</h3>
     <ul>
-      <li>Учасники повинні поводитися етично, спокійно й з повагою до інших.</li>
-      <li>Заборонено ловити або годувати за межами сектору, заважати сусідам, вживати алкоголь у великих дозах, проявляти агресію чи приховувати результати.</li>
-      <li>Куріння — лише у межах свого сектору.</li>
-      <li>Порушення етики — жовта або червона картка.</li>
-      <li>Усі спірні питання вирішує головний суддя.</li>
+      <li>
+        <strong>Спомб:</strong> годування спомбом дозволено <strong>лише у світлий час</strong>, який визначає організатор.
+      </li>
+      <li><strong>Кобра:</strong> дозволена цілодобово.</li>
+      <li>
+        <strong>Метод-годівниці:</strong>
+        <ul>
+          <li>Дозволено годування способом <strong>Mini</strong> та <strong>Midi X</strong>.</li>
+          <li><strong>Large — заборонено.</strong></li>
+        </ul>
+      </li>
+      <li><strong>Тигровий горіх:</strong> категорично заборонено використовувати <strong>цілий</strong> тигровий горіх (у тому числі «маленький»). Дозволено <strong>тільки мелений</strong> / подрібнений (через м’ясорубку).</li>
     </ul>
 
-    <h3>4. Дисциплінарні покарання</h3>
+    <h3>6. Порядок зважування та гуманне поводження</h3>
+    <ul>
+      <li>Формат: «зловив — відпустив».</li>
+      <li>Зважування проводиться <strong>лише в присутності судді</strong>.</li>
+      <li>Команда зобов’язана:
+        <ul>
+          <li>витягнути короповий мішок з рибою;</li>
+          <li>покласти мішок у мат;</li>
+          <li>перемістити рибу у зважувальний мішок;</li>
+          <li>після фіксації ваги — <strong>відпустити рибу у воду</strong>.</li>
+        </ul>
+      </li>
+      <li><strong>Заборонено</strong> тримати більше <strong>1 риби</strong> в одному короповому мішку.</li>
+
+      <li><strong>Обов’язкове оснащення по рибі:</strong>
+        <ul>
+          <li>Антисептик для обробки риби.</li>
+          <li><strong>10 коропових мішків</strong> (мінімум).</li>
+          <li>
+            <strong>Короповий мат:</strong>
+            <ul>
+              <li>Якщо на водоймі <strong>немає</strong> матів — <strong>мат обов’язковий</strong> у команди.</li>
+              <li>Якщо на водоймі <strong>є</strong> мати — власний мат можна не мати.</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+
+      <li><strong>Риба 10+ кг</strong> — обов’язково виклик судді.</li>
+      <li><strong>2 амури</strong> — обов’язково виклик судді.</li>
+      <li>Заборонено важити та фотографуватися з рибою без судді.</li>
+    </ul>
+
+    <h3>7. Старт/фініш та “15 хвилин”</h3>
+    <ul>
+      <li>Після сигналу фінішу дозволяється до <strong>15 хвилин</strong> на <strong>виважування</strong> риби.</li>
+      <li>Ця норма діє лише якщо клювання відбулося і риба підвелася до сигналу фінішу.</li>
+    </ul>
+
+    <h3>8. Поведінка, дисципліна та штрафи</h3>
+    <ul>
+      <li>Учасники повинні дотримуватися тиші, порядку та чистоти у секторі.</li>
+      <li>Заборонені агресія, конфлікти, свідомі маніпуляції з результатами, приховування риби/фактів клювання.</li>
+      <li>Порушення етики — жовта або червона картка. Дві жовті картки = дискваліфікація.</li>
+    </ul>
+
     <table class="table">
       <thead>
         <tr><th>Порушення</th><th>Покарання</th></tr>
       </thead>
       <tbody>
         <tr><td>Вихід за межі сектору без дозволу</td><td>Попередження</td></tr>
-        <tr><td>Ловля або підгодовування за межами сектору</td><td>Жовта картка</td></tr>
-        <tr><td>Перебування без манішки</td><td>Жовта картка</td></tr>
-        <tr><td>Грубе порушення правил водойми</td><td>Червона картка / дискваліфікація</td></tr>
-        <tr><td>Заборонена оснастка (2 гачки, 3 вудилища тощо)</td><td>Дискваліфікація</td></tr>
-        <tr><td>Агресивна поведінка, сп’яніння</td><td>Миттєва дискваліфікація</td></tr>
-        <tr><td>Приховування риби чи маніпуляції</td><td>Дискваліфікація</td></tr>
+        <tr><td>Ловля/годування за межами сектору</td><td>Жовта картка</td></tr>
+        <tr><td>Недбале поводження з рибою</td><td>Жовта/Червона картка</td></tr>
+        <tr><td>Заборонена оснастка / порушення правил по вудилищах/гачках</td><td>Дискваліфікація</td></tr>
+        <tr><td>Алкоголь у великих дозах, агресія</td><td>Миттєва дискваліфікація</td></tr>
+        <tr><td>Фото/зважування без судді</td><td>Жовта/Червона (за рішенням судді)</td></tr>
       </tbody>
     </table>
-    <p>👉 Дві жовті картки = дискваліфікація.</p>
 
-    <h3>5. Суддівство</h3>
-    <ul>
-      <li>Судді контролюють дотримання правил, оснащення, поводження з рибою та точність результатів.</li>
-      <li>Суддя має право зайти у будь-який сектор у будь-який момент.</li>
-      <li>Рішення головного судді остаточне.</li>
-    </ul>
-
-    <h3>6. Безпека та гуманне поводження</h3>
-    <ul>
-      <li>Обов’язково мати: короповий мат, антисептик, щонайменше 5 мішків для риби.</li>
-      <li>Заборонено тримати більше 1 риби в одному мішку.</li>
-      <li>Зважування лише в присутності судді.</li>
-      <li>Фото — після зважування, рибу відпускають одразу.</li>
-      <li>Недбале поводження — жовта або червона картка.</li>
-    </ul>
-
-    <h3>7. Відповідальність учасників</h3>
-    <ul>
-      <li>Кожен спортсмен відповідає за чистоту сектору, дотримання правил і збереження природи.</li>
-      <li>За порушення одного члена команди відповідає вся команда.</li>
-      <li>Організатор не відповідає за погодні умови чи втрату майна.</li>
-    </ul>
-
-    <h3>8. Протести та апеляції</h3>
+    <h3>9. Протести та апеляції</h3>
     <ul>
       <li>Протест подається головному судді протягом 30 хвилин після інциденту.</li>
-      <li>Без доказів протест не розглядається.</li>
+      <li>Без доказів протест може бути не розглянутий.</li>
       <li>Рішення суддів остаточне.</li>
     </ul>
 
-    <h3>9. Призи та відзнаки</h3>
+    <h3>10. Фінансові умови</h3>
     <ul>
-      <li>Призовий фонд формується організаторами й спонсорами.</li>
-      <li>Основні номінації:  
-        🥇 Загальний переможець · 🐟 Big Fish · 🤝 Fair Play</li>
-      <li>Переможці отримують кубки, медалі, сертифікати та призи.</li>
+      <li>У разі відмови команди від участі <strong>менше ніж за тиждень</strong> до старту — внесок <strong>не повертається</strong>.</li>
     </ul>
 
-    <h3>10. Контакти</h3>
+    <h3>11. Призи та відзнаки</h3>
+    <ul>
+      <li>Призовий фонд формується організаторами та спонсорами.</li>
+      <li>Номінації й розподіл призів оголошуються організатором окремо для кожного етапу.</li>
+    </ul>
+
+    <h3>12. Контакти</h3>
     <p>
       Для участі або уточнення інформації:<br>
       📞 <a href="tel:+380631731116">+380 63 173 11 16</a><br>
       📞 <a href="tel:+380978824845">+380 97 882 48 45</a>
     </p>
-    <p>Організатор: команда DK Два Кума<br>
-       Проєкт: STOLAR CARP 2025</p>
+
   </section>
 </main>
 
