--- a/weigh_judge.html
+++ b/weigh_judge.html
@@ -26,20 +26,12 @@
       <div class="rowTop">
         <div>
           <div class="big" id="zoneTitle">Зона —</div>
-          <div class="muted" id="status">Очікування…</div>
         </div>
         <div class="miniBadge" id="netBadge" style="display:none;">● online</div>
       </div>
 
-      <div class="muted" style="margin-top:10px;">
-        <div><b>Привʼязка:</b></div>
-        <div class="kv" id="bindInfo">—</div>
-      </div>
-
       <div class="btnRow">
-        <button class="btn btn--primary" id="btnOpen">Відкрити мою зону</button>
-        <button class="btn btn--ghost" id="btnSaveHint">Додати на екран</button>
-        <button class="btn btn--danger" id="btnReset">Скинути</button>
+        <button class="btn btn--primary" id="btnOpen">Увійти</button>
       </div>
 
       <div class="muted" id="msg" style="margin-top:10px;"></div>
