--- a/rules.html
+++ b/rules.html
@@ -1,259 +1,183 @@
-<!doctype html>
-<html lang="uk">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Регламент — STOLAR CARP</title>
-  <meta name="description" content="Офіційний регламент змагань STOLAR CARP: правила участі, суддівство, дисципліна, безпека та контакти організаторів.">
-  <link rel="stylesheet" href="assets/css/main.css">
-  <script defer src="assets/js/config.js"></script>
-</head>
+<section class="container section">
+  <h1 class="title-gradient">Регламент змагань STOLAR CARP</h1>
 
-<body>
-<header class="header">
-  <div class="container header__row">
-    <a class="logo" href="index.html">
-      <span class="logo__mark">SC</span>
-      <span class="logo__text">STOLAR CARP</span>
-    </a>
+    <h3>Регламент водойми</h3>
+<ul>
+  <li><strong>Регламент та правила водойми є обов’язковими до виконання</strong> для всіх учасників, гостей та осіб, що перебувають у секторі.</li>
+  <li>У разі розбіжностей між регламентом змагань та регламентом водойми <strong>пріоритет має регламент водойми</strong>.</li>
+  <li>Незнання правил водойми <strong>не звільняє від відповідальності</strong>.</li>
+  <li>Порушення регламенту водойми може бути підставою для <strong>попередження, штрафних санкцій або дискваліфікації</strong> за рішенням головного судді та організатора.</li>
+</ul>
 
-    <nav class="nav" id="nav">
-      <a href="/index.html" class="nav__link">Головна</a>
-      <a href="/rules.html" class="nav__link nav__link--active">Регламент</a>
-      <a href="/register.html" class="nav__link">Реєстрація</a>
-      <a href="/live.html" class="nav__link">Live</a>
-      <a href="/rating.html" class="nav__link">Рейтинг</a>
-      <a href="/lakes.html" class="nav__link">Водойми</a>
-      <a href="/sponsors.html" class="nav__link">Спонсори</a>
-      <a href="/events/index.html" class="nav__link">Архів</a>
-      <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
-    </nav>
+  <p class="form__hint">
+    🏆 <strong>РЕГЛАМЕНТ ЗМАГАНЬ STOLAR CARP</strong><br>
+    <span class="muted">Формат змагань: класика та флет-фідер · Catch &amp; Release)</span>
+  </p>
+  <h3>Додатковий івент “Big Fish Total”</h3>
+<p>
+  Проводиться за бажанням учасників. Участь є добровільною. Призовий фонд формується з внесків учасників.
+  <strong>Організатор залишає за собою право утримувати частину коштів на організаційні та адміністративні витрати.</strong>
+</p>
 
-    <button class="burger" id="burger"><span></span><span></span><span></span></button>
-  </div>
-</header>
+  <h3>0. Принципи турніру</h3>
+  <ul>
+    <li>Формат: <strong>«зловив — відпустив»</strong> (Catch &amp; Release).</li>
+    <li>Ціль: розвиток спортивного карпфішингу, безпека та гуманне ставлення до риби.</li>
+    <li>Учасники зобов’язані виконувати вимоги організатора та суддів.</li>
+    <li>Спірні питання вирішує головний суддя</li>
+  </ul>
+  <h3>Мінімальна кількість команд</h3>
+<ul>
+  <li>Змагання проводяться за умови участі <strong>не менше 12 команд</strong>.</li>
+  <li>У разі, якщо мінімальна кількість команд не набрана, організатор залишає за собою право перенести дату змагань, змінити формат проведення або скасувати змагання.</li>
+</ul>
 
-<main class="main">
-  <section class="container section">
-    <h1 class="title-gradient">Регламент змагань STOLAR CARP</h1>
+  <h3>1. Формат участі</h3>
+  <ul>
+    <li><strong>Командний формат:</strong> 2–3 повноцінних учасники</li>
+    <li><strong>STALKER (соло, якщо оголошено):</strong> тільки 1 учасник у секторі.</li>
+    <li>Регламент діє однаково для командного та соло-формату.</li>
+  </ul>
 
-    <div class="notice">
-      Учасники беруть повну участь у зважуванні: витягнути короповий мішок з рибою, покласти у мат, перемістити в зважувальний мішок, зачепити на вагу та відпустити рибу у воду одразу після фіксації ваги.
-      Це дозволяє судді оперативно внести дані до протоколу.
-    </div>
+  <h3>2. Організація, сектори та зони</h3>
+  <ul>
+    <li>Сектори/зони визначаються жеребкуванням.</li>
+    <li>Розклад (заїзд, старт, фініш, нагородження) публікується на сайті та у групі вайбер</li>
+    <li><strong>Дистанція лову</strong> оголошується та фіксується <strong>до жеребкування</strong> і є обов’язковою.</li>
+    <li>Заборонено їздити автомобілем по береговій лінії від старту до фінішу.</li>
+  </ul>
 
-    <h3>Основні пункти</h3>
-    <ul>
-      <li>Сектори та зони визначаються жеребкуванням.</li>
-      <li>Залік: загальна вага улову за змагання. При однаковій вазі вирішує «Big Fish» (найбільша риба).</li>
-      <li>Оновлення протоколів на сайті — онлайн.</li>
-      <li>Усі учасники зобов’язані дотримуватись регламенту та правил водойми.</li>
-      <li>Дати старту/фінішу конкретного етапу — на сайті змагання.</li>
-    </ul>
+  <h3>3. Залік і визначення переможців</h3>
+  <ul>
+    <li>Залік: <strong>загальна вага улову</strong> за змагання.</li>
+    <li>При однаковій вазі виграє <strong>Big Fish</strong> команди.</li>
+  </ul>
 
-    <p class="form__hint">
-      🏆 <strong>РЕГЛАМЕНТ ЗМАГАНЬ STOLAR CARP</strong><br>
-      (універсальний для командних етапів та формату STALKER)
-    </p>
+  <h3>4. Правила лову та оснащення </h3>
+  <li><strong>Заборонено використання будь-яких застібок та вертлюгів у складі робочих монтажів.</strong></li>
+  <ul>
+    <li><strong>Довжина вудилищ:</strong> не більше <strong>4.5 м</strong>.</li>
 
-    <h3>1. Загальні положення</h3>
-    <ul>
-      <li>Змагання проводяться у форматі «зловив — відпустив» (Catch &amp; Release).</li>
-      <li>Мета змагань — розвиток спортивного карпфішингу, популяризація чесної гри та гуманного ставлення до риби.</li>
-      <li>Учасники зобов’язані виконувати вимоги організатора та суддівської бригади.</li>
-      <li>Організатор має право уточнювати програму/графік без шкоди чесності змагань і з обов’язковим повідомленням учасників.</li>
-      <li>Будь-які спірні питання вирішує головний суддя. Рішення головного судді — остаточне.</li>
-    </ul>
+    <li><strong>Вудилища:</strong>
+      <ul>
+        <li>У секторі дозволено мати необмежену кількість запасних вудилищ.</li>
+        <li><strong>Одночасно в роботі — не більше 2 робочих вудилищ.</strong></li>
+        <li>Монтаж-оснастка — <strong>не більше 1 гачка</strong>.</li>
+        <li><strong>Заборонено закидати третє робоче вудилище</strong>, доки одне з двох робочих не вимотане.</li>
+      </ul>
+    </li>
 
-    <h3>2. Формат участі та склад команди</h3>
-    <ul>
-      <li><strong>Командний формат:</strong> 2–3 повноцінних учасника в секторі.</li>
-      <li><strong>STALKER (соло):</strong> 1 учасник у секторі.</li>
-      <li>Для обох форматів діють однакові правила з цього регламенту.</li>
-    </ul>
+    <li><strong>Маркеріння:</strong>
+      <ul>
+        <li>Дозволено використання маркера <strong>не виймаючи 2 робочих</strong>.</li>
+        <li>Маркеріння дозволено після заїзду у сектор та до фінішу.</li>
+      </ul>
+    </li>
 
-    <h3>3. Організаційні питання</h3>
-    <ul>
-      <li>Час прибуття команд, жеребкування, старт і фініш — відповідно до офіційного розкладу етапу (на сайті).</li>
-      <li><strong>Дистанція лову</strong> фіксується (встановлюється) <strong>перед жеребкуванням</strong> та є обов’язковою для всіх учасників.</li>
-      <li>Після жеребкування та заїзду у сектор дозволено маркування (маркеріння) протягом змагань згідно правил нижче.</li>
-      <li>Гості залишають автомобілі на паркомісцях і до сектору проходять пішки.</li>
-      <li>Забороняється їздити автомобілем по береговій лінії від старту до фінішу.</li>
-    </ul>
+    <li><strong>Ліска та шок-лідер:</strong>
+      <ul>
+        <li>Основна волосінь — <strong>не менше 0.23 мм</strong>.</li>
+        <li>Шок-лідер дозволено <strong>не більше 10 м</strong>.</li>
+        <li><strong>Шнур — заборонено.</strong></li>
+      </ul>
+    </li>
 
-    <h3>4. Правила лову та оснащення</h3>
-    <ul>
-      <li><strong>Довжина вудилищ:</strong> не більше <strong>4.5 м</strong>.</li>
+    <li><strong>Дозволені монтажі:</strong>
+      <ul>
+        <li><strong>Класичні коропові</strong> та <strong>флет- Method</strong>.</li>
+        <li>Монтажі мають відповідати принципу <strong>безпечного звільнення риби</strong> від грузу/годівниці у випадку обриву.</li>
+        <li>Флет — лише у безпечному виконанні.</li>
+      </ul>
+    </li>
 
-      <li>
-        <strong>Вудилища:</strong>
-        <ul>
-          <li>Дозволяється мати у секторі <strong>необмежену кількість удилищ</strong>.</li>
-          <li><strong>Одночасно в роботі — не більше 2 робочих вудилищ.</strong></li>
-          <li>На кожному робочому вудилищі — <strong>не більше 1 гачка</strong>.</li>
-          <li><strong>Забороняється закидати третє (запасне) вудилище з монтажем/гачком</strong>, коли одне з двох робочих ще не вимотане.</li>
-        </ul>
-      </li>
+    <li><strong>Заборонено:</strong>
+      <ul>
+        <li>Кораблики/човни та будь-які плавзасоби для завозу оснасток і прикорму.</li>
+        <li><strong>Дозволяється</strong> зайти у воду <strong>не далі 20 метрів</strong> від берега <strong>1 учаснику</strong> для <strong>підсачування риби</strong>.</li>
+      </ul>
+    </li>
 
-      <li>
-        <strong>Маркеріння:</strong>
-        <ul>
-          <li>Дозволяється використання <strong>маркера 3-м вудилищем</strong> <strong>не виймаючи 2 робочих</strong>.</li>
-          <li>Маркеріння дозволено після заїзду у сектор після жеребкування та до фінішу.</li>
-        </ul>
-      </li>
+    <li><strong>Дозволяється зайти у воду перед стартом змагань</strong> для перевірки/очистки сектора від коряг і зачепів.</li>
+  </ul>
 
-      <li>
-        <strong>Ліска та лідери:</strong>
-        <ul>
-          <li>Основна волосінь (моно) — <strong>не менше 0.23 мм</strong>.</li>
-          <li>Шок-лідер дозволено <strong>не більше 10 м</strong>.</li>
-          <li><strong>Лідкор — заборонено.</strong></li>
-        </ul>
-      </li>
+  <h3>5. Годування</h3>
+  <ul>
+    <li><strong>Спомб:</strong> дозволено лише у світлий час, який визначає організатор.</li>
+    <li><strong>Кобра:</strong> дозволена цілодобово.</li>
+    <li><strong>Spomb:</strong> дозволені <strong>Mini</strong> та <strong>MidiX</strong>. Використання <strong>Large</strong> забороняється.</li>
+    <li><strong>Жива насадка — заборонена!!!</strong></li>
 
-      <li>
-        <strong>Дозволені монтажі:</strong>
-        <ul>
-          <li><strong>Класичний</strong> або <strong>флет-метод</strong> (інші не потрібні).</li>
-          <li>Монтажі мають відповідати принципу <strong>безпечного звільнення риби від грузу</strong>.</li>
-          <li>Флет-метод — тільки на шок-лідері з безпечним звільненням.</li>
-        </ul>
-      </li>
+    <li><strong>ТИГРОВИЙ ГОРІХ:</strong> дозволено використовувати <strong>лише МЕЛЕНИЙ</strong> (подрібнений через м’ясорубку).</li>
 
-      <li>
-        <strong>Заборонені дії:</strong>
-        <ul>
-          <li>Використання корабликів/човнів та будь-яких плавзасобів для завозу оснасток і прикорму.</li>
-          <li>Запливання/заходження у воду під час змагань (виняток — екстрені ситуації за дозволом судді).</li>
-        </ul>
-      </li>
+  <h3>6. Порядок зважування та гуманне поводження</h3>
+  <ul>
+    <li>Зважування проводиться <strong>лише в присутності судді</strong>.</li>
+    <li>Команда зобов’язана: витягнути мішок → ТА ДОПОМОГТИ СУДДІ У ЗВАЖУВАННІ<strong>відпустити рибу </strong>.</li>
+    <li><strong>Заборонено</strong> тримати більше <strong>1 риби</strong> в одному короповому мішку.</li>
 
-      <li>
-        <strong>Дозволено зайти у воду до старту</strong> (до сигналу старту) для перевірки/очистки сектора від коряг і зачепів.
-      </li>
+    <li><strong>Обов’язкове оснащення:</strong>
+      <ul>
+        <li>Антисептик.</li>
+        <li><strong>10 коропових мішків</strong> (мінімум).</li>
+        <li>Короповий мат: якщо на водоймі матів немає — мат обов’язковий у команди.</li>
+      </ul>
+    </li>
 
-      <li>
-        <strong>Дистанція лову:</strong>
-        <ul>
-          <li>Дистанція вимірюється <strong>по котушці</strong> (кліпса/лічильник/підрахунок обертів), а не по кінчику вудилища.</li>
-          <li>Фіксувати дистанцію на вудилищі/котушці — дозволено, як зручно команді, але <strong>не далі дозволеної</strong>.</li>
-        </ul>
-      </li>
-    </ul>
+    <li><strong>Риба 10+ кг</strong> — обов’язково виклик судді.</li>
+    <li><strong>2 амури</strong> — обов’язково виклик судді.</li>
+    <li>Фото/зважування без судді — забороняється.</li>
+  </ul>
 
-    <h3>5. Годування</h3>
-    <ul>
-      <li>
-        <strong>Спомб:</strong> годування спомбом дозволено <strong>лише у світлий час</strong>, який визначає організатор.
-      </li>
-      <li><strong>Кобра:</strong> дозволена цілодобово.</li>
-      <li>
-        <strong>Метод-годівниці:</strong>
-        <ul>
-          <li>Дозволено годування способом <strong>Mini</strong> та <strong>Midi X</strong>.</li>
-          <li><strong>Large — заборонено.</strong></li>
-        </ul>
-      </li>
-      <li><strong>Тигровий горіх:</strong> категорично заборонено використовувати <strong>цілий</strong> тигровий горіх (у тому числі «маленький»). Дозволено <strong>тільки мелений</strong> / подрібнений (через м’ясорубку).</li>
-    </ul>
+  <<h3>Правило та Fair play</h3>
+<ul>
+  <li>Після сигналу завершення змагань (свистка) учасникам надається <strong>15 хвилин</strong> для завершення <strong>виважування риби</strong>, яка клюнула <strong>до сигналу</strong>.</li>
+  <li>Якщо під час виважування риба зайшла в сектор сусідньої команди, заплуталася або перетнула вудилища сусідів, <strong>дозволяється за згодою сусідньої команди</strong> зайти для <strong>вивільнення оснастки або риби</strong>.</li>
+  <li><strong>Підсачування та завершення виважування здійснюється виключно у своєму секторі.</strong></li>
+<ul>
 
-    <h3>6. Порядок зважування та гуманне поводження</h3>
-    <ul>
-      <li>Формат: «зловив — відпустив».</li>
-      <li>Зважування проводиться <strong>лише в присутності судді</strong>.</li>
-      <li>Команда зобов’язана:
-        <ul>
-          <li>витягнути короповий мішок з рибою;</li>
-          <li>покласти мішок у мат;</li>
-          <li>перемістити рибу у зважувальний мішок;</li>
-          <li>після фіксації ваги — <strong>відпустити рибу у воду</strong>.</li>
-        </ul>
-      </li>
-      <li><strong>Заборонено</strong> тримати більше <strong>1 риби</strong> в одному короповому мішку.</li>
+  <h3>8. Дисципліна та штрафи</h3>
+  <ul>
+    <li>Тиша, порядок та чистота у секторі — обов’язкові.</li>
+    <li>Заборонені конфлікти, агресія, маніпуляції, приховування риби під час зважування.</li>
+    <li>Порушення етики — жовта або червона картка. Дві жовті = дискваліфікація.</li>
+  </ul>
 
-      <li><strong>Обов’язкове оснащення по рибі:</strong>
-        <ul>
-          <li>Антисептик для обробки риби.</li>
-          <li><strong>10 коропових мішків</strong> (мінімум).</li>
-          <li>
-            <strong>Короповий мат:</strong>
-            <ul>
-              <li>Якщо на водоймі <strong>немає</strong> матів — <strong>мат обов’язковий</strong> у команди.</li>
-              <li>Якщо на водоймі <strong>є</strong> мати — власний мат можна не мати.</li>
-            </ul>
-          </li>
-        </ul>
-      </li>
+  <table class="table">
+    <thead>
+      <tr><th>Порушення</th><th>Покарання</th></tr>
+    </thead>
+    <tbody>
+      <tr><td>Вихід за межі сектору без дозволу</td><td>Попередження</td></tr>
+      <tr><td>Ловля/годування за межами свого сектору</td><td>Жовта картка</td></tr>
+      <tr><td>Недбале поводження з рибою</td><td>Жовта/Червона (за рішенням судді)</td></tr>
+      <tr><td>Заборонена оснастка / порушення правил годування</td><td>Жовта/Червона</td></tr>
+      <tr><td>Алкоголь у великих дозах, агресія</td><td>Миттєва дискваліфікація</td></tr>
+      <tr><td>Фото/зважування без судді</td><td>Жовта</td></tr>
+    </tbody>
+  </table>
 
-      <li><strong>Риба 10+ кг</strong> — обов’язково виклик судді.</li>
-      <li><strong>2 амури</strong> — обов’язково виклик судді.</li>
-      <li>Заборонено важити та фотографуватися з рибою без судді.</li>
-    </ul>
+  <h3>9. Протести</h3>
+  <ul>
+    <li>Протест подається головному судді протягом <strong>30 хвилин</strong> після інциденту.</li>
+    <li>Без доказів протест може бути не розглянутий.</li>
+    <li>Рішення суддів — остаточне.</li>
+  </ul>
 
-    <h3>7. Старт/фініш та “15 хвилин”</h3>
-    <ul>
-      <li>Після сигналу фінішу дозволяється до <strong>15 хвилин</strong> на <strong>виважування</strong> риби.</li>
-      <li>Ця норма діє лише якщо клювання відбулося і риба підвелася до сигналу фінішу.</li>
-    </ul>
+  <h3>10. Фінансові умови</h3>
+  <ul>
+    <li>Відмова від участі </strong> — внесок <strong>не повертається</strong>.</li>
+  </ul>
 
-    <h3>8. Поведінка, дисципліна та штрафи</h3>
-    <ul>
-      <li>Учасники повинні дотримуватися тиші, порядку та чистоти у секторі.</li>
-      <li>Заборонені агресія, конфлікти, свідомі маніпуляції з результатами, приховування риби/фактів клювання.</li>
-      <li>Порушення етики — жовта або червона картка. Дві жовті картки = дискваліфікація.</li>
-    </ul>
+  <h3>11. Призи</h3>
+  <ul>
+    <li>Призовий фонд формується організаторами та спонсорами.</li>
+    <li>Номінації та розподіл призів оголошуються окремо для кожного етапу.</li>
+  </ul>
 
-    <table class="table">
-      <thead>
-        <tr><th>Порушення</th><th>Покарання</th></tr>
-      </thead>
-      <tbody>
-        <tr><td>Вихід за межі сектору без дозволу</td><td>Попередження</td></tr>
-        <tr><td>Ловля/годування за межами сектору</td><td>Жовта картка</td></tr>
-        <tr><td>Недбале поводження з рибою</td><td>Жовта/Червона картка</td></tr>
-        <tr><td>Заборонена оснастка / порушення правил по вудилищах/гачках</td><td>Дискваліфікація</td></tr>
-        <tr><td>Алкоголь у великих дозах, агресія</td><td>Миттєва дискваліфікація</td></tr>
-        <tr><td>Фото/зважування без судді</td><td>Жовта/Червона (за рішенням судді)</td></tr>
-      </tbody>
-    </table>
-
-    <h3>9. Протести та апеляції</h3>
-    <ul>
-      <li>Протест подається головному судді протягом 30 хвилин після інциденту.</li>
-      <li>Без доказів протест може бути не розглянутий.</li>
-      <li>Рішення суддів остаточне.</li>
-    </ul>
-
-    <h3>10. Фінансові умови</h3>
-    <ul>
-      <li>У разі відмови команди від участі <strong>менше ніж за тиждень</strong> до старту — внесок <strong>не повертається</strong>.</li>
-    </ul>
-
-    <h3>11. Призи та відзнаки</h3>
-    <ul>
-      <li>Призовий фонд формується організаторами та спонсорами.</li>
-      <li>Номінації й розподіл призів оголошуються організатором окремо для кожного етапу.</li>
-    </ul>
-
-    <h3>12. Контакти</h3>
-    <p>
-      Для участі або уточнення інформації:<br>
-      📞 <a href="tel:+380631731116">+380 63 173 11 16</a><br>
-      📞 <a href="tel:+380978824845">+380 97 882 48 45</a>
-    </p>
-
-  </section>
-</main>
-
-<footer class="footer">
-  <div class="container footer__row">
-    <div>© 2025 STOLAR CARP · Львів</div>
-    <div class="footer__links">
-      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
-      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
-    </div>
-  </div>
-</footer>
-</body>
-</html>
+  <h3>12. Контакти</h3>
+  <p>
+    Для участі або уточнення інформації:<br>
+    📞 <a href="tel:+380631731116">+380 63 173 11 16</a><br>
+    📞 <a href="tel:+380978824845">+380 97 882 48 45</a>
+  </p>
+</section>
